--- a/nuget-specs/Framerizr.Client/Framerizr.Client.nuspec
+++ b/nuget-specs/Framerizr.Client/Framerizr.Client.nuspec
@@ -6,17 +6,20 @@
     <owners>Omar Ahmed García Pérez</owners>
     <projectUrl>https://bitbucket.org/nebtrx/framerizr</projectUrl>
     <iconUrl>https://bitbucket.org/nebtrx/framerizr/raw/3332b7c78d7340d1edb2078346eecc8c2fcc3602/logo/framerizr32x32.png</iconUrl>
-    <id>Framerizr.MVC</id>
-    <title>Framerizr for ASP.NET MVC</title>
+    <id>Framerizr.Client</id>
+    <title>Framerizr's Client</title>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>
-      Framerizr.MVC lets you easily embed your ASP.NET Razor views inside iframes hosted in external webs with kick-ass auto-height behavior Ajax requests resistant.
+      Client's assets for Framerizr.
     </description>
     <language>en-US</language>
-    <tags>iframe auto-height ASP.NET MVC</tags>
-    <dependencies>      
-      <dependency id="Framerizr.MVC.Server" version="1.0.0" />
-      <dependency id="Framerizr.Client" version="1.0.0" />
+    <tags>iframe auto-height ASP.NET MVC client</tags>
+    <dependencies>
+      <dependency id="jQuery" version="1.6.2" />
     </dependencies>
-  </metadata>  
+  </metadata>
+  <files>
+    <file src="..\..\Framerizr\Scripts\easyXDM\*" target="content\Scripts\" />
+    <file src="..\..\Framerizr\Scripts\framerizr\framerizr-1.0.0.js" target="content\Scripts\" />
+  </files>
 </package>
